# Predict-Grant-Applications

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: main.ipynb
