[project]
name = "predict-grant-applications"
version = "0.1.0"
description = ""
authors = [
    {name = "Darinochka1",email = "darisha6602@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.10"
dependencies = [
    "lightautoml (==0.4.2)",
    "fasttext-numpy2 (>=0.10.4,<0.11.0)",
    "nltk (>=3.9.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
